# themis

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs
src/misc/: fonts.rs  mod.rs  search.rs
src/ui/: file_menu.rs  main.rs  mod.rs  settings.rs
