[package]
name = "themis"
version = "0.1.0"
authors = ["styxpilled"]
edition = "2021"
rust-version = "1.56"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
fs_extra = "1.2.0" # allows retrieving file size
bytesize = {version = "1.1.0", features = ["serde"]}
# filetime = "0.2.15" # shows file timestamps
serde = { version = "1", features = ["derive"], optional = true }
mft_ntfs = { git = "https://github.com/styxpilled/mft-ntfs", features = ["progress"] }

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm