[package]
name = "themis"
version = "0.1.0"
authors = ["styxpilled"]
edition = "2021"
rust-version = "1.56"

[dependencies]
eframe = "0.17.0" # Gives us egui, epi and web+native backends
bytesize = {version = "1.1.0", features = ["serde"]}
# filetime = "0.2.15" # shows file timestamps
serde = { version = "1", features = ["derive"], optional = true }
mft_ntfs = { git = "https://github.com/styxpilled/mft-ntfs", features = ["progress"] }
open = "2.1.1" # for opening files
crossbeam-channel = "0.5.4" # Thread channels
notify = "5.0.0-pre.14" # Watching directories for changes

[features]
default = ["persistence"]
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 2